--- a/src/assets/styles/app.css
+++ b/src/assets/styles/app.css
@@ -1,5 +1,6 @@
 @import "_variables.css";
 @import "_root.css";
+@import "_sr-only.css";
 @import "_type.css";
 @import "_table.css";
 @import "_link.css";
